force-app/main/default/objects/ccrz__E_PriceModifier__c/ccrz__E_PriceModifier__c.object-meta.xml
<CustomObject>
    <description>Price Modifier</description>
    <label>CC Price Modifier</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>PriceModifierID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Price Modifiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>