force-app/main/default/objects/ccrz__E_PriceModifier__c/fields/ccrz__DiscountType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DiscountType__c</fullName>
    <description>The type of discount this price modifer uses.  This is a value that can be found in the DiscountType custom settings.</description>
    <label>DiscountType</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>