force-app/main/default/objects/ccrz__E_PriceModifier__c/fields/ccrz__PriceModifierID__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PriceModifierID__c</fullName>
    <externalId>true</externalId>
    <label>Price Modifier Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>