force-app/main/default/objects/ccrz__E_PriceModifier__c/fields/ccrz__Quantity__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>