force-app/main/default/objects/ccrz__E_PriceModifier__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>ccrz__Amount__c</columns>
    <columns>ccrz__CartTotalAmount__c</columns>
    <columns>ccrz__DiscountType__c</columns>
    <columns>ccrz__PriceModifierID__c</columns>
    <columns>ccrz__Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>